--- a/src/talks/heard-of-gatsby.mdx
+++ b/src/talks/heard-of-gatsby.mdx
@@ -10,6 +10,13 @@ slug: /five-questions-on-gatsby
 
 Here’s five blazing-fast questions and answers with Front End Developer, Grayson Hicks, about everyone’s favorite front-end tool right now.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/SN1i8-kJYg0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/SN1i8-kJYg0"
+  frameBorder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 Created as part of Mediacurrents Friday 5 series.
