--- a/src/talks/code-splitting.mdx
+++ b/src/talks/code-splitting.mdx
@@ -1,22 +1,20 @@
 ---
 title: Native React 18 Code-Splitting with Gatsby
 description: >-
-  In this video, learn how to use fine-grained code-splitting without a third-party library and understand why we have used loadable-components so far, but why React 18 + Gatsby unlocks a simpler developer experience. 
+  In this video, learn how to use fine-grained code-splitting without a third-party library and understand why we have used loadable-components so far, but why React 18 + Gatsby unlocks a simpler developer experience.
 date: '2021-10-08'
 categories: []
 keywords: []
 slug: /native-code-splitting
 ---
 
-In this video, learn how to use fine-grained code-splitting without a third-party library and understand why we have used loadable-components so far, but why React 18 + Gatsby unlocks a simpler developer experience. 
+In this video, learn how to use fine-grained code-splitting without a third-party library and understand why we have used loadable-components so far, but why React 18 + Gatsby unlocks a simpler developer experience.
 
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=lypEGNEIRKE"
+  src="https://www.youtube.com/embed/lypEGNEIRKE"
   frameBorder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
-
-
