--- a/src/talks/degrading-performance.mdx
+++ b/src/talks/degrading-performance.mdx
@@ -13,10 +13,8 @@ Join Gatsby Senior Software Engineer Grayson Hicks and Gatsby Software Engineer 
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=uVrp_A7rj_I"
+  src="https://www.youtube.com/embed/uVrp_A7rj_I"
   frameBorder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
-
-
