--- a/src/talks/image-cdn.mdx
+++ b/src/talks/image-cdn.mdx
@@ -13,10 +13,8 @@ Watch as we add Gatsby Image CDN support to gatsby-plugin-remote-images together
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=2moLttHSLWc"
+  src="https://www.youtube.com/embed/2moLttHSLWc"
   frameBorder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
-
-
