--- a/src/talks/serverless-functions.mdx
+++ b/src/talks/serverless-functions.mdx
@@ -13,7 +13,7 @@ Presented at Gatsby Conf 2021, learn about serverless functions and how to use t
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=Ss1NfgBhikc"
+  src="https://www.youtube.com/embed/Ss1NfgBhikc"
   frameBorder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
