--- a/src/talks/v5-tricks.mdx
+++ b/src/talks/v5-tricks.mdx
@@ -13,7 +13,7 @@ Grayson & Maddie walk you through the best practices we’ve developed over 4+ y
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=t4tnqHQ3x9s"
+  src="https://www.youtube.com/embed/t4tnqHQ3x9s"
   frameBorder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
